<resources>
    <string name="app_name">MediaCapture</string>

    <!--video-->
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="loop">Loop</string>
    <string name="order">Order</string>

    <string name="search">Search</string>

    <string name="capture">Capture</string>
    <string name="description_info">Info</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <string name="start_record">start record</string>
    <string name="stop_record">stop record</string>
    <string name="record_video_tip">stop record</string>
    <string name="can_not_record_tip">can not record</string>
    <string name="record_space_tip">The memory is full</string>
    <string name="record_time_end_tip">The recording time has reached the limit</string>

    <string name="permission_request">This app needs permission for camera and audio recording.</string>

    <string name="intro_message">
        <![CDATA[
            This sample demonstrates the basic use of Camera2 API. Check the source code to see how
            you can display camera preview and take pictures.
        ]]>
    </string>
    <string name="title_activity_video_surface">VideoSurfaceActivity</string>

    <!--    some strings-->
    <string name="scan_title">&quot;Scanning ...&quot;</string>
    <string name="scan_tip">&quot;Scanning,Please wait...&quot;</string>
    <string name="scanning_init">&quot;Scanning ...\n\n&quot;</string>
    <string name="scanning">&quot;Scanning ...\n&quot;</string>

    <string name="press_exit_again">Press again to exit</string>

    <string name="tip_choose_file">Please choose a video file.</string>
    <string name="AttachCameraDevice">Please attach a camera device.</string>
    <string name="noCameraDevice">No Camera Devices Found</string>

    <string name="saveFilePath">File Path: \t</string>

    <string name="noFile">No File Found</string>
    <string name="noVideoFile">No Video File Found</string>

    <string name="Storage_Mounted">Storage Mounted</string>
    <string name="Storage_Unmounted">Storage Unmounted</string>
    <string name="Video_Parsing_failed">Video parsing failed</string>

    <string name="description">operation</string>

    <string name="title_settings">Settings</string>
    <string name="title_size_settings">Size Setting</string>
    <string name="title_speed_settings">Speed Setting</string>
    <string name="list_search_file">Search Video Files</string>
    <string name="list_reverse_position">Reverse Position</string>
    <string name="list_video_size">Size Of Video</string>

    <string-array name="list_setting">
        <item>Search Video Files</item>
        <item>Reverse Position</item>
        <item>Playback speed</item>
        <item>Size Of Video</item>
        <item>Size Of Camera</item>
    </string-array>

    <string-array name="list_size_setting">
        <item>Default</item>
        <item>Magnify</item>
    </string-array>

    <string-array name="list_speed_setting">
        <item>0.5X</item>
        <item>0.75X</item>
        <item>1X</item>
        <item>1.25X</item>
        <item>1.5X</item>
        <item>2X</item>
    </string-array>

</resources>
